examples/test/testpolicy18751.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18751
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key36: value23
      key17: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value47
          key8: value5
          key37: value38
      podSelector:
        matchLabels:
          key5: value17
          key14: value15
